--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel=”stylesheet” type=”text/css” href=”style.css” />
 </head>
 <body>
-    
+    <div class="grid-container">
+    <div class="space1"></div>
+    <header class = "header">Finance Tricks</header>
+    <section class="slideshow">slideshow</section>
+    <div class="space2"></div>
+    <div class="text">text</textarea></div>
+    <div class="space3"></div>
 </body>
 </html>
