--- a/index.html
+++ b/index.html
@@ -4,15 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel=”stylesheet” type=”text/css” href=”style.css” />
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    
 </head>
 <body>
-    <div class="grid-container">
+  <div class="grid-container">
+
     <div class="space1"></div>
-    <header class = "header">Finance Tricks</header>
+
+    <header class = "header">
+      <div class="logo-and-buttens">
+      <button></button>
+
+      </div>
+    </header>
+
     <section class="slideshow">slideshow</section>
+
     <div class="space2"></div>
-    <div class="text">text</textarea></div>
+
+    <div class="text">text</div>
+
     <div class="space3"></div>
+</div>
 </body>
 </html>
