--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </nav>
     </header>
 
-    <section class="slideshow">slideshow</section>
+    <section class="slideshow">slideshow
 
     <div class="slideshow-container">
         <div class="myslides fade">
@@ -48,37 +48,15 @@
         </div>¨
         <br>
         <div>
-            <span class="dot" onclick="=currentSlide(1)"></span>
-            <span class="dot" onclick="=currentSlide(2)"></span>
-            <span class="dot" onclick="=currentSlide(3)"></span>
+            <span class="dot" onclick="currentSlide(1)"></span>
+            <span class="dot" onclick="currentSlide(2)"></span>
+            <span class="dot" onclick="currentSlide(3)"></span>
 
         </div>
     </div> 
-    <script>
-let slideindex = 1;
-showslide(slideindex)
+
+    </section>
  
-function plusSlides(n){
-    showslide(slideindex += n);
-}
-function plusSlides(n){
-    showslide(slideindex = n);
-}
-function showslide(n) { let i;
-      let slides = document.getElementsByClassName("mySlides");
-      let dots = document.getElementsByClassName("dot");
-      if (n > slides.length) {slideIndex = 1}
-      if (n < 1) {slideIndex = slides.length}
-      for (i = 0; i < slides.length; i++) {
-        slides[i].style.display = "none";
-}
-for (i = 0; i < dots.length; i++) {
-        dots[i].className = dots[i].className.replace(" active", "");
-      }
-      slides[slideIndex-1].style.display = "block";
-      dots[slideIndex-1].className += " active";
-    }
-    </script>
 
     <div class="space2"></div>
 
