--- a/index.html
+++ b/index.html
@@ -22,25 +22,25 @@
     </nav>
     </header>
 
-    <section class="slideshow">slideshow
+    <section class="slideshow">
 
     <div class="slideshow-container">
         <div class="myslides fade">
             <div class="numbertext">1 / 3</div>
-           <img src="img/bild1.avif" style="width:100%">
+           <img src="img/bild1.avif" style="width:100%" alt="invesera">
             <div class="text">skriv något här</div>
         </div>
 
         <div class="slideshow-container">
             <div class="myslides fade">
                 <div class="numbertext">2 / 3</div>
-               <img src="img/bild2.avif" style="width:100%">
+               <img src="img/bild2.avif" style="width:100%" alt="invesera">
                 <div class="text">skriv något här</div>
             </div> 
         <div class="slideshow-container">
             <div class="myslides fade">
                 <div class="numbertext">3 / 3</div>
-               <img src="img/bild3.avif" style="width:100%">
+               <img src="img/bild3.avif" style="width:100%" alt="invesera">
                 <div class="text">skriv något här</div>
             </div>  
         <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
