--- a/index2.html
+++ b/index2.html
@@ -18,7 +18,7 @@
 <body>
     <div class="card-container">
         <div class="cards">
-            <img class="foto" src="img/img_snowtops.jpg">
+            <img class="foto" src="img/arnold.jpg">
             <div class="Card-content">
                 <h1>Arnold</h1>
                 <p>Lorem ipsum dolor sit amet </p>
