--- a/index.html
+++ b/index.html
@@ -14,53 +14,25 @@
 
     <header class = "header">
       <div class="logo-and-buttens">
-      <span class="logo">Finance Triks</span>
-    </div>
+<img src="img/output-onlinepngtools (6).png" alt="Finance Triks logo" class="logo-img">    </div>
     <nav> 
-        <button class="nav-button">Home</button>
-        <button class="nav-button">Abute</button>
+        <button class="nav-button" ><a href="index2.html">The Team</a></button>
+        <button class="nav-button" ><a href="index3.html">Tips</a></button>
     </nav>
     </header>
 
     <section class="slideshow">
-
-    <div class="slideshow-container">
-        <div class="myslides fade">
-            <div class="numbertext">1 / 3</div>
-           <img src="img/bild1.avif" style="width:100%" alt="invesera">
-            <div class="text">skriv något här</div>
-        </div>
-
-        <div class="slideshow-container">
-            <div class="myslides fade">
-                <div class="numbertext">2 / 3</div>
-               <img src="img/bild2.avif" style="width:100%" alt="invesera">
-                <div class="text">skriv något här</div>
-            </div> 
-        <div class="slideshow-container">
-            <div class="myslides fade">
-                <div class="numbertext">3 / 3</div>
-               <img src="img/bild3.avif" style="width:100%" alt="invesera">
-                <div class="text">skriv något här</div>
-            </div>  
-        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-        <a class="next" onclick="plusSlides(+1)">&#10095;</a>
-        </div>¨
-        <br>
-        <div>
-            <span class="dot" onclick="currentSlide(1)"></span>
-            <span class="dot" onclick="currentSlide(2)"></span>
-            <span class="dot" onclick="currentSlide(3)"></span>
-
-        </div>
-    </div> 
-
+    <img class="foto" src="img/bild2.avif" alt="">
+    <div class="banner-text">Här hittar du tips,råd och verktyg för att ta kontroll över din ekonomi och nå dina mål!"</div>
     </section>
  
 
     <div class="space2"></div>
 
-    <div class="text">text</div>
+    <div class="text">
+        <h1>Välkommen till Finance Triks</h1>
+        <p>Din partner för smartare finanser och framgångsrik investering</p>
+    </div>
 
     <div class="space3"></div>
 </div>
