--- a/index2.html
+++ b/index2.html
@@ -10,35 +10,36 @@
         <span class="logo">Finance Triks</span>
       </div>
       <nav> 
-          <button class="nav-button">Home</button>
-          <button class="nav-button">Abute</button>
+        <button class="nav-button" ><a href="index.html">Home</a></button>
+        <button class="nav-button" ><a href="index3.html">Tips</a></button>      
+      </nav>
       </nav>
       </header>
 </head>
 <body>
     <div class="card-container">
         <div class="cards">
-            <img class="foto" src="img/arnold.jpg">
+            <img class="foto" src="img/Mr.crem.jpg">
             <div class="Card-content">
-                <h1>Arnold</h1>
-                <p>Lorem ipsum dolor sit amet </p>
+                <h1>Mr.Creme</h1>
+                <p>Reporter</p>
                 <a href="" class="card-button">Läs här</a>
             </div>
         </div>
         <div class="cards">
-            <img class="foto" src="img/img_snowtops.jpg">
+            <img class="foto" src="img/IMG_9967.JPG">
             <div class="Card-content">
-                <h1>Mr.Black</h1>
-                <p>Lorem ipsum dolor sit amet </p>
-                <a href=" " class="card-button">Läs här</a>
+                <h1>Elias johannson </h1>
+                <p>Elias Johansson, ekonom från ett av Afrikas mest välbärgade länder, är en riktig tillgång på arbetsplatsen. Hans internationella erfarenhet och skarpa analytiska förmåga gör honom till en ovärderlig kollega, och hans humor ger alltid ett leende på läpparna. Vi ser fram emot fler berättelser om hans exklusiva bakgrund – och kanske några ekonomiska tips!</p>
+                <a href="https://www.google.se/maps/place/Oxledsv%C3%A4gen+39,+433+67+S%C3%A4vedalen/@57.7204077,12.0786218,465m/data=!3m2!1e3!4b1!4m6!3m5!1s0x464ff6a40da61181:0xdbca1014b4a9a470!8m2!3d57.7204077!4d12.0811967!16s%2Fg%2F11c2brl21h?entry=ttu&g_ep=EgoyMDI0MTIxMS4wIKXMDSoASAFQAw%3D%3D" class="card-button">Läs här</a>
             </div>
         </div>
         <div class="cards">
-            <img class="foto" src="img/img_snowtops.jpg">
+            <img class="foto" src="img/WIN_20241217_13_46_17_Pro.jpg">
             <div class="Card-content">
-                <h1>The king</h1>
-                <p>Lorem ipsum dolor sit amet </p>
-                <a href=" " class="card-button">Läs här</a>
+                <h1>Rebelle Barakat </h1>
+                <p>Rebelle Barakat från Libanon är vår medieansvariga som alltid levererar med kreativitet och engagemang. Hennes förmåga att kommunicera och lyfta fram vårt varumärke gör henne till en ovärderlig del av vårt team. Vi är stolta över att ha Rebelle med oss!</p>
+                <a href="https://www.youtube.com/watch?v=YBS8rJvxnKo " class="card-button">lär här</a>
             </div>
         </div>
     </div>
